[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scenes/ViewArea/ViewArea.gd" type="Script" id=1]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 120, -50, 120, 50 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 120, -50, 130, 0, 120, 50 )

[sub_resource type="CircleShape2D" id=3]

[node name="ViewArea" type="Area2D"]
collision_mask = 127
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_ViewArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ViewArea_body_exited"]
